# mpcover

./: CHANGELOG.md  Jenkinsfile  README.md  TODO.md  pyproject.toml
.github/workflows/: check.yml  codeql-analysis.yml  dependabot-automerge.yml  pylint.yml
mpcover/: __init__.py  __main__.py  config.py  connection.py  controler.py  main.py
mpcover/gui/: __init__.py  root.py
