[tool.poetry]
name = "mpcover"
version = "0.2.0"
description = "Python program for displaying album covers of music currently playing through MPD."
authors = ["Uroš Milivojević <milivojevicu1998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.0"
Pillow = "^9.4.0"

[tool.poetry.scripts]
mpcover = 'mpcover.__main__:run'

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
pycln = "^2.2.2"
black = "^23.7.0"
pyright = "^1.1.326"

[tool.isort]
profile = "black"

[tool.pycln]
all = true
exclude = "__init__.py"

[tool.black]
line-length = 100
target-version = ["py37", "py38", "py39", "py310"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
