[tool.poetry]
name = "mpcover"
version = "0.4.0"
description = "Python program for displaying album covers of music currently playing through MPD."
authors = ["Uroš Milivojević <milivojevicu1998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.0"
Pillow = "^10.0.0"

[tool.poetry.scripts]
mpcover = 'mpcover.__main__:run'

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = ">=0.5.0,<0.14.0"

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
extend-select = ["I"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
